<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <EditText
        android:id="@+id/userID"
        android:layout_width="291dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user_ID"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="291dp"
        android:layout_height="49dp"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/userID"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="288dp"
        android:layout_height="57dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:fontFamily="@font/muli_bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.485" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="288dp"
        android:layout_height="49dp"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:fontFamily="@font/muli_bold"
        android:background="#FFFFFF"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.117"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.485" />

</androidx.constraintlayout.widget.ConstraintLayout>