...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.183"/>

        <TextView
            android:layout_width="398dp"
            android:layout_height="67dp"
            android:id="@+id/help_page_ans_numcurr"
            android:textSize="24sp"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
...
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/help_page_ans_numcurr"/>

        <TextView
            android:layout_width="398dp"
            android:layout_height="67dp"
            android:id="@+id/help_page_ans_basecurr"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
...
